# PromptAudio

./: CLAUDE.md  pyproject.toml  requirements.txt
docs/: implementation_plan.md  prompt_audio_selection_research.md
prompt_audio/: __init__.py  candidate_generator.py  cli.py  config.py  pipeline.py  preprocessor.py  quality_gate.py  scorer.py  silence_handler.py  transcriber.py
